<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_blog">

    <fragment
        android:id="@+id/navigation_blog"
        android:name="com.rom.moxo.ui.blog.BlogFragment"
        android:label="@string/title_blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.rom.moxo.ui.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />
    <fragment
        android:id="@+id/navigation_journey"
        android:name="com.rom.moxo.ui.journey.JourneyFragment"
        android:label="@string/title_journey"
        tools:layout="@layout/fragment_journey" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.rom.moxo.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rom.moxo.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_terms"
        android:name="com.rom.moxo.ui.terms.TermsFragment"
        android:label="@string/title_terms"
        tools:layout="@layout/fragment_terms" />
</navigation>